# todo-dapp-ic

./: Cargo.toml  README.md  dfx.json  generate-candid.sh
src/yral-test-backend/: Cargo.toml  yral-test-backend.did
src/yral-test-backend/src/: errors.rs  lib.rs
src/yral-test-backend/src/api/: todo.rs
src/yral-test-backend/src/models/: todo.rs
